--- a/bday.html
+++ b/bday.html
@@ -278,7 +278,7 @@
         <canvas id="bg-canvas"></canvas>
         <audio id="bg-music" loop>
             <!-- LOCAL FILE INJECTED HERE -->
-            <source src="file:///C:/Users/Yoghes/OneDrive/Desktop/bday/perfect_ed_sheeran.mp3" type="audio/mp3">
+            <source src="https://github.com/yokii01/hbd/raw/refs/heads/main/perfect_ed_sheeran.mp3" type="audio/mp3">
         </audio>
 
         <!-- STAGE 1: THE MAGIC WORD SCREEN -->
@@ -678,4 +678,5 @@
         animate();
     </script>
 </body>
+
 </html>
