--- a/bday.html
+++ b/bday.html
@@ -336,7 +336,7 @@
                 <div class="float-img relative w-40 h-40 mx-auto mb-6 mt-2">
                     <div class="absolute inset-0 bg-blue-400 rounded-full blur-xl opacity-30"></div>
                     <!-- LOCAL IMAGE INJECTED HERE -->
-                    <img src="file:///C:/Users/Yoghes/OneDrive/Desktop/bday/image.jpg" alt="Memory" class="relative w-full h-full object-cover rounded-full border-[4px] border-white/30 shadow-2xl">
+                    <img src="https://github.com/yokii01/hbd/blob/main/image.jpg?raw=true" alt="Memory" class="relative w-full h-full object-cover rounded-full border-[4px] border-white/30 shadow-2xl">
                 </div>
                 <h1 class="handwriting text-5xl mb-2 text-pink-200 drop-shadow-lg">Happy Birthday</h1>
                 <h2 class="text-4xl tracking-wide font-extrabold text-white mb-8 drop-shadow-md">Vinzz!</h2>
@@ -364,7 +364,7 @@
                 <h1 class="serif text-3xl mb-4 font-bold text-white drop-shadow-lg leading-tight">Will you be mine <br> forever?</h1>
                 <p class="serif text-pink-100/80 italic text-md mb-5 px-4">"Not just for today, but for every sunrise and sunset of my life."</p>
                 <div class="swise-container">
-                    <p class="swise-text">SWISE IS WAITING FOR US TO INVITE<br>US AS THE PERFECT COUPLE</p>
+                    <p class="swise-text">SWISS IS WAITING FOR US TO INVITE<br>US AS THE PERFECT COUPLE</p>
                 </div>
                 <div class="flex flex-col gap-3 w-full mt-4 relative">
                     <button id="yes-btn" onclick="acceptProposal(event)" class="btn-yes w-full py-4 rounded-full text-white font-bold text-lg tracking-wide shadow-lg">YES, I WILL! 💖</button>
@@ -680,3 +680,4 @@
 </body>
 
 </html>
+
